// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer Demo CurrentDOMModeUsageExample wroks fine 1`] = `
<div
  class="t-container"
>
  <div
    class="t-suf-container"
  >
    <div
      class="t-drawer t-drawer-right t-drawer-attach v-transfer-dom"
    >
      <div
        class="t-drawer__mask"
      />
      <div
        class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
        style="width: 300px;"
      >
        <div
          class="t-drawer__header"
        >
          抽屉标题
        </div>
        <!---->
        <div
          class="t-drawer__body"
        >
          
          <p>
            This is a drawer
          </p>
          
        </div>
        <div
          class="t-drawer__footer"
        >
          <div
            style="display: flex; justify-content: flex-start;"
          >
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-drawer-confirm"
              props="[object Object]"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-drawer-cancel"
              props="[object Object]"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="tdesign-radio-button"
    >
       抽屉弹出方向： 
      <div
        class="t-radio-group t-radio-group-medium t-radio-group-outline"
        modelvalue="right"
      >
        
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="left"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
             left 
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="right"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
             right 
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="top"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
             top 
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="bottom"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
             bottom 
            
            
          </span>
        </label>
        
      </div>
    </div>
    <br />
    <div
      class="tdesign-radio-button"
    >
       抽屉弹出模式： 
      <div
        class="t-radio-group t-radio-group-medium t-radio-group-outline"
        modelvalue="overlay"
      >
        
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="overlay"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
             overlay 
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name=""
            type="radio"
            value="push"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
             push 
            
            
          </span>
        </label>
        
      </div>
    </div>
    <br />
    <br />
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         Open 
        
      </span>
    </button>
  </div>
</div>
`;

exports[`Drawer Demo CustomUsageExample wroks fine 1`] = `
<div>
  <!-- 使用插槽自定义 -->
  <div
    class="t-drawer t-drawer-right v-transfer-dom"
  >
    <div
      class="t-drawer__mask"
    />
    <div
      class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
      style="width: 300px;"
    >
      <!---->
      
      <div
        class="t-drawer__body"
      >
        
        <p>
          This is the body of drawer
        </p>
        
      </div>
      <div
        class="t-drawer__footer"
      >
        
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            确定
            
          </span>
        </button>
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
             取消 
            
          </span>
        </button>
        
      </div>
    </div>
  </div>
  <!-- 使用 props 自定义 -->
  <div
    class="t-drawer t-drawer-right v-transfer-dom"
  >
    <div
      class="t-drawer__mask"
    />
    <div
      class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
      style="width: 300px;"
    >
      <div
        class="t-drawer__header"
      >
        抽屉标题
      </div>
      
      <div
        class="t-drawer__body"
      >
        
        <p>
          This is the body of drawer
        </p>
        
      </div>
      <div
        class="t-drawer__footer"
      >
        <div>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              confrim
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              cancel
              
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <!-- 单独定义确认/取消按钮 -->
  <div
    class="t-drawer t-drawer-right v-transfer-dom"
  >
    <div
      class="t-drawer__mask"
    />
    <div
      class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
      style="width: 300px;"
    >
      <div
        class="t-drawer__header"
      >
        I am the title
      </div>
      
      <div
        class="t-drawer__body"
      >
        
        <p>
          This is the body of drawer
        </p>
        
      </div>
      <div
        class="t-drawer__footer"
      >
        <div
          style="display: flex; justify-content: flex-start;"
        >
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-drawer-confirm"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              OK
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default t-drawer-cancel"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              cancel
              
            </span>
          </button>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       Open(插槽定义) 
      
    </span>
  </button>
      
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       Open(属性定义) 
      
    </span>
  </button>
      
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       Open(单独设置确认/取消按钮) 
      
    </span>
  </button>
</div>
`;

exports[`Drawer Demo NoMaskUsageExample wroks fine 1`] = `
<div>
  <div
    class="t-drawer t-drawer-right t-drawer-no-mask v-transfer-dom"
  >
    <!---->
    <div
      class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
      style="width: 300px;"
    >
      <div
        class="t-drawer__header"
      >
        抽屉标题
      </div>
      <!---->
      <div
        class="t-drawer__body"
      >
        
        <p>
          抽屉的内容
        </p>
        
      </div>
      <div
        class="t-drawer__footer"
      >
        <div
          style="display: flex; justify-content: flex-start;"
        >
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-drawer-confirm"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              确认
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default t-drawer-cancel"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消
              
            </span>
          </button>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       打开抽屉 
      
    </span>
  </button>
</div>
`;

exports[`Drawer Demo PlacementUsageExample wroks fine 1`] = `
<div>
  <!-- @click-cancel 和 :onClickCancel 两种写法都支持； :onClickOverlay 和 @click-overlay 两种写法都支持-->
  <div
    class="t-drawer t-drawer-right v-transfer-dom"
  >
    <div
      class="t-drawer__mask"
    />
    <div
      class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
      style="width: 300px;"
    >
      <div
        class="t-drawer__header"
      >
        标题名称
      </div>
      <!---->
      <div
        class="t-drawer__body"
      >
        
        <p>
          抽屉的内容
        </p>
        
      </div>
      <div
        class="t-drawer__footer"
      >
        <div
          style="display: flex; justify-content: flex-start;"
        >
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-drawer-confirm"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              确认
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default t-drawer-cancel"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消
              
            </span>
          </button>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="tdesign-radio-button"
  >
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-outline"
      modelvalue="right"
    >
      
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           左侧 
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           右侧 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           上方 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="bottom"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           下方 
          
          
        </span>
      </label>
      
    </div>
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default btn-top-margin"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       打开抽屉 
      
    </span>
  </button>
</div>
`;

exports[`Drawer Demo PopupUsageExample wroks fine 1`] = `
<div>
  <!---->
  <div
    class="tdesign-radio-button"
  >
     抽屉弹出模式： 
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-outline"
      modelvalue="push"
    >
      
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="overlay"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           overlay 
          
          
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="push"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           push 
          
          
        </span>
      </label>
      
    </div>
  </div>
  <br />
  <br />
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       Open 
      
    </span>
  </button>
</div>
`;

exports[`Drawer Demo SizeUsageExample wroks fine 1`] = `
<div>
  <div
    class="t-drawer t-drawer-right v-transfer-dom"
  >
    <div
      class="t-drawer__mask"
    />
    <div
      class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
      style="width: 300px;"
    >
      <div
        class="t-drawer__header"
      >
        抽屉标题
      </div>
      <!---->
      <div
        class="t-drawer__body"
      >
        
        <p>
          抽屉的内容
        </p>
        
      </div>
      <div
        class="t-drawer__footer"
      >
        <div
          style="display: flex; justify-content: flex-start;"
        >
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-drawer-confirm"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              确认
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default t-drawer-cancel"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消
              
            </span>
          </button>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="tdesign-radio-button"
  >
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-outline btn-top-margin"
      modelvalue="small"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="small"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           小 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="medium"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           中 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="large"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           大 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="200"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           200 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="400px"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           400px 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="50%"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           50% 
          
          
        </span>
      </label>
      
    </div>
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default btn-top-margin"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       打开抽屉 
      
    </span>
  </button>
</div>
`;

exports[`Drawer Demo destroy wroks fine 1`] = `
<div>
  <!-- 动画效果待开发 -->
  <!---->
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       打开抽屉 
      
    </span>
  </button>
</div>
`;

exports[`Drawer Demo operation wroks fine 1`] = `
<div>
  <div
    class="t-drawer t-drawer-right v-transfer-dom"
  >
    <div
      class="t-drawer__mask"
    />
    <div
      class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
      style="width: 300px;"
    >
      <div
        class="t-drawer__header"
      >
        标题名称
      </div>
      <!---->
      <div
        class="t-drawer__body"
      >
        
        <div
          class="t-drawer-demo-div"
        >
          <span>
            标签 A
          </span>
          <div
            class="t-input t-size-m"
          >
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              type="text"
            />
            <!---->
          </div>
        </div>
        <div
          class="t-drawer-demo-div"
        >
          <span>
            标签 B
          </span>
          <div
            class="t-input t-size-m"
          >
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              type="text"
            />
            <!---->
          </div>
        </div>
        <div
          class="t-drawer-demo-div"
        >
          <span>
            标签 C
          </span>
          <div
            class="t-input t-size-m"
          >
            <!---->
            <input
              autocomplete="false"
              class="t-input__inner"
              type="text"
            />
            <!---->
          </div>
        </div>
        
      </div>
      <div
        class="t-drawer__footer"
      >
        <div
          style="display: flex; justify-content: flex-start;"
        >
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-drawer-confirm"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              确认
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default t-drawer-cancel"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消
              
            </span>
          </button>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       打开抽屉 
      
    </span>
  </button>
</div>
`;

exports[`Drawer base demo works fine 1`] = `
<div>
  <div
    class="t-drawer t-drawer-right v-transfer-dom"
  >
    <div
      class="t-drawer__mask"
    />
    <div
      class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
      style="width: 300px;"
    >
      <div
        class="t-drawer__header"
      >
        header
      </div>
      <div
        class="t-drawer__close-btn"
      >
        <svg
          class="t-icon t-icon-close t-submenu-icon t-submenu-icon"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </div>
      <div
        class="t-drawer__body"
      >
        
        <p>
          This is a controlled drawer
        </p>
        
      </div>
      <div
        class="t-drawer__footer"
      >
        <div
          style="display: flex; justify-content: flex-start;"
        >
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-drawer-confirm"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              确认
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default t-drawer-cancel"
            props="[object Object]"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消
              
            </span>
          </button>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       打开抽屉 
      
    </span>
  </button>
</div>
`;
